Bug 1683822 - Unregister the device changed callback before destroying an AudioCallbackDriver. r=pehrsons, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D101178